--- a/lib/premiere_ecoute_web/live/home_live.html.heex
+++ b/lib/premiere_ecoute_web/live/home_live.html.heex
@@ -43,7 +43,7 @@
                       status_text={gettext("New")}
                       status_variant="info"
                       action_text={gettext("Choose an album to get started")}
-                      href={~p"/discography/album/select"}
+                      href={~p"/sessions/new"}
                     />
                   <% end %>
                 <% end %>
