--- a/lib/premiere_ecoute_web/live/home_live.html.heex
+++ b/lib/premiere_ecoute_web/live/home_live.html.heex
@@ -8,7 +8,7 @@
 
             <div class="mb-12">
               <div class="flex gap-6">
-                <%= if @current_session do %>
+                <%= if (@current_session && @current_session.source == :album) do %>
                   <.activity_card
                     type="content"
                     label={gettext("Current Session")}
