--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -10,11 +10,11 @@ if [ -n "${FLY_APP_NAME}" ]; then
   export RELEASE_NODE="${FLY_APP_NAME}-${FLY_IMAGE_REF##*-}@${FLY_PRIVATE_IP}"
 else
   # Digital Ocean / generic deployment configuration
-  # Disable distributed Erlang (single node deployment)
+  # Use short names for single node deployment
   export ERL_AFLAGS="-proto_dist inet6_tcp"
   export ECTO_IPV6="false"
-  export RELEASE_DISTRIBUTION="name"
-  export RELEASE_NODE="localhost"
+  export RELEASE_DISTRIBUTION="sname"
+  export RELEASE_NODE="premiere_ecoute"
 fi
 
 # Uncomment to send crash dumps to stderr
