--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,6 +5,7 @@
 @import "./components/backgrounds.css";
 @import "./components/buttons.css";
 @import "./components/effects.css";
+@import "./components/sidebar.css";
 @import "./utilities/synthwave.css";
 @import "./utilities/static_pages.css";
 
